@@ -15,36 +15,83 @@
  */
 package io.micronaut.ast.groovy.visitor;
 
-import io.micronaut.ast.groovy.annotation.GroovyAnnotationMetadataBuilder;
-import io.micronaut.ast.groovy.utils.AstAnnotationUtils;
+import groovy.lang.GroovyObject;
+import groovy.lang.GroovyObjectSupport;
+import groovy.lang.Script;
 import io.micronaut.ast.groovy.utils.AstClassUtils;
-import io.micronaut.ast.groovy.utils.AstGenericUtils;
-import io.micronaut.ast.groovy.utils.PublicMethodVisitor;
-import io.micronaut.core.annotation.*;
+import io.micronaut.context.annotation.BeanProperties;
+import io.micronaut.core.annotation.AnnotationMetadata;
+import io.micronaut.core.annotation.AnnotationMetadataProvider;
+import io.micronaut.core.annotation.Internal;
+import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.naming.NameUtils;
 import io.micronaut.core.reflect.ClassUtils;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.core.util.CollectionUtils;
-import io.micronaut.inject.ast.*;
-import org.apache.groovy.ast.tools.ClassNodeUtils;
-import org.apache.groovy.util.concurrent.LazyInitializable;
-import org.codehaus.groovy.ast.*;
+import io.micronaut.inject.annotation.AnnotationMetadataHierarchy;
+import io.micronaut.inject.ast.ArrayableClassElement;
+import io.micronaut.inject.ast.ClassElement;
+import io.micronaut.inject.ast.ConstructorElement;
+import io.micronaut.inject.ast.Element;
+import io.micronaut.inject.ast.ElementModifier;
+import io.micronaut.inject.ast.ElementQuery;
+import io.micronaut.inject.ast.FieldElement;
+import io.micronaut.inject.ast.GenericPlaceholderElement;
+import io.micronaut.inject.ast.MemberElement;
+import io.micronaut.inject.ast.MethodElement;
+import io.micronaut.inject.ast.PackageElement;
+import io.micronaut.inject.ast.ParameterElement;
+import io.micronaut.inject.ast.PrimitiveElement;
+import io.micronaut.inject.ast.PropertyElement;
+import io.micronaut.inject.ast.PropertyElementQuery;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadata;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
+import io.micronaut.inject.ast.annotation.MutableAnnotationMetadataDelegate;
+import io.micronaut.inject.ast.utils.AstBeanPropertiesUtils;
+import io.micronaut.inject.ast.utils.EnclosedElementsQuery;
+import org.codehaus.groovy.ast.AnnotatedNode;
+import org.codehaus.groovy.ast.ClassHelper;
+import org.codehaus.groovy.ast.ClassNode;
+import org.codehaus.groovy.ast.ConstructorNode;
+import org.codehaus.groovy.ast.FieldNode;
+import org.codehaus.groovy.ast.GenericsType;
+import org.codehaus.groovy.ast.InnerClassNode;
+import org.codehaus.groovy.ast.MethodNode;
+import org.codehaus.groovy.ast.PackageNode;
+import org.codehaus.groovy.ast.PropertyNode;
 import org.codehaus.groovy.ast.stmt.BlockStatement;
+import org.objectweb.asm.Opcodes;
 
-import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.OptionalDouble;
+import java.util.OptionalInt;
+import java.util.OptionalLong;
+import java.util.Set;
+import java.util.Spliterator;
+import java.util.Spliterators;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static groovyjarjarasm.asm.Opcodes.*;
-import static org.codehaus.groovy.ast.ClassHelper.makeCached;
+import java.util.stream.StreamSupport;
 
 /**
  * A class element returning data from a {@link ClassNode}.
  *
  * @author James Kleeh
+ * @author Denis Stepanov
  * @since 1.0
  */
 @Internal
@@ -65,67 +112,134 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
     private static final Predicate<FieldNode> JUNK_FIELD_FILTER = m -> {
         String fieldName = m.getName();
 
-        return  fieldName.startsWith("$") ||
-                fieldName.startsWith("__$") ||
+        return fieldName.startsWith("__$") ||
                 fieldName.contains("trait$") ||
                 fieldName.equals("metaClass") ||
                 m.getDeclaringClass().equals(ClassHelper.GROOVY_OBJECT_TYPE) ||
                 m.getDeclaringClass().equals(ClassHelper.OBJECT_TYPE);
     };
     protected final ClassNode classNode;
+    protected Map<String, ClassElement> resolvedTypeArguments;
     private final int arrayDimensions;
     private final boolean isTypeVar;
-    private List<? extends ClassElement> overrideBoundGenericTypes;
-    private Map<String, Map<String, ClassNode>> genericInfo;
+    private List<PropertyElement> properties;
+    private List<PropertyElement> nativeProperties;
+    @Nullable
+    private ElementAnnotationMetadata elementTypeAnnotationMetadata;
+    @Nullable
+    private ClassElement theType;
+    private final GroovyEnclosedElementsQuery groovyEnclosedElementsQuery = new GroovyEnclosedElementsQuery(false);
+    private final GroovyEnclosedElementsQuery groovySourceEnclosedElementsQuery = new GroovyEnclosedElementsQuery(true);
+    @Nullable
+    private AnnotationMetadata annotationMetadata;
 
     /**
-     * @param visitorContext     The visitor context
-     * @param classNode          The {@link ClassNode}
-     * @param annotationMetadata The annotation metadata
+     * @param visitorContext            The visitor context
+     * @param nativeElement             The native element
+     * @param annotationMetadataFactory The annotation metadata
      */
-    public GroovyClassElement(GroovyVisitorContext visitorContext, ClassNode classNode, AnnotationMetadata annotationMetadata) {
-        this(visitorContext, classNode, annotationMetadata, null, 0);
+    public GroovyClassElement(GroovyVisitorContext visitorContext,
+                              GroovyNativeElement nativeElement,
+                              ElementAnnotationMetadataFactory annotationMetadataFactory) {
+        this(visitorContext, nativeElement, annotationMetadataFactory, null, 0);
     }
 
     /**
-     * @param visitorContext     The visitor context
-     * @param classNode          The {@link ClassNode}
-     * @param annotationMetadata The annotation metadata
-     * @param genericInfo        The generic info
-     * @param arrayDimensions    The number of array dimensions
+     * @param visitorContext            The visitor context
+     * @param nativeElement             The native element
+     * @param annotationMetadataFactory The annotation metadata factory
+     * @param resolvedTypeArguments     The resolved type arguments
+     * @param arrayDimensions           The number of array dimensions
      */
-    GroovyClassElement(
-            GroovyVisitorContext visitorContext,
-            ClassNode classNode,
-            AnnotationMetadata annotationMetadata,
-            Map<String, Map<String, ClassNode>> genericInfo,
-            int arrayDimensions) {
-        this(visitorContext, classNode, annotationMetadata, genericInfo, arrayDimensions, false);
+    GroovyClassElement(GroovyVisitorContext visitorContext,
+                       GroovyNativeElement nativeElement,
+                       ElementAnnotationMetadataFactory annotationMetadataFactory,
+                       Map<String, ClassElement> resolvedTypeArguments,
+                       int arrayDimensions) {
+        this(visitorContext, nativeElement, annotationMetadataFactory, resolvedTypeArguments, arrayDimensions, false);
     }
 
     /**
-     * @param visitorContext     The visitor context
-     * @param classNode          The {@link ClassNode}
-     * @param annotationMetadata The annotation metadata
-     * @param genericInfo        The generic info
-     * @param arrayDimensions    The number of array dimensions
-     * @param isTypeVar          Is the element a type variable
+     * @param visitorContext            The visitor context
+     * @param nativeElement             The native element
+     * @param annotationMetadataFactory The annotation metadata factory
+     * @param resolvedTypeArguments     The resolved type arguments
+     * @param arrayDimensions           The number of array dimensions
+     * @param isTypeVar                 Is the element a type variable
      */
-    GroovyClassElement(
-            GroovyVisitorContext visitorContext,
-            ClassNode classNode,
-            AnnotationMetadata annotationMetadata,
-            Map<String, Map<String, ClassNode>> genericInfo,
-            int arrayDimensions,
-            boolean isTypeVar) {
-        super(visitorContext, classNode, annotationMetadata);
-        this.classNode = classNode;
-        this.genericInfo = genericInfo;
+    GroovyClassElement(GroovyVisitorContext visitorContext,
+                       GroovyNativeElement nativeElement,
+                       ElementAnnotationMetadataFactory annotationMetadataFactory,
+                       Map<String, ClassElement> resolvedTypeArguments,
+                       int arrayDimensions,
+                       boolean isTypeVar) {
+        super(visitorContext, nativeElement, annotationMetadataFactory);
+        this.resolvedTypeArguments = resolvedTypeArguments;
         this.arrayDimensions = arrayDimensions;
+        classNode = (ClassNode) nativeElement.annotatedNode();
         if (classNode.isArray()) {
             classNode.setName(classNode.getComponentType().getName());
         }
         this.isTypeVar = isTypeVar;
+    }
+
+    @Override
+    protected GroovyClassElement copyConstructor() {
+        return new GroovyClassElement(visitorContext, getNativeType(), elementAnnotationMetadataFactory, resolvedTypeArguments, arrayDimensions, isTypeVar);
+    }
+
+    @Override
+    public AnnotationMetadata getAnnotationMetadata() {
+        if (annotationMetadata == null) {
+            if (getNativeType() instanceof GroovyNativeElement.ClassWithOwner) {
+                annotationMetadata = new AnnotationMetadataHierarchy(true, super.getAnnotationMetadata(), getTypeAnnotationMetadata());
+            } else {
+                annotationMetadata = super.getAnnotationMetadata();
+            }
+        }
+        return annotationMetadata;
+    }
+
+    @Override
+    protected MutableAnnotationMetadataDelegate<?> getAnnotationMetadataToWrite() {
+        if (getNativeType() instanceof GroovyNativeElement.ClassWithOwner) {
+            return getTypeAnnotationMetadata();
+        }
+        return super.getAnnotationMetadataToWrite();
+    }
+
+    @Override
+    public ClassElement withAnnotationMetadata(AnnotationMetadata annotationMetadata) {
+        return (ClassElement) super.withAnnotationMetadata(annotationMetadata);
+    }
+
+    @Override
+    public ClassElement withTypeArguments(Map<String, ClassElement> typeArguments) {
+        return new GroovyClassElement(visitorContext, getNativeType(), elementAnnotationMetadataFactory, typeArguments, arrayDimensions);
+    }
+
+    @NonNull
+    public final ClassElement withTypeArguments(@NonNull Collection<ClassElement> typeArguments) {
+        if (typeArguments.isEmpty()) {
+            // Allow to eliminate all arguments
+            return withTypeArguments(Collections.emptyMap());
+        }
+        Set<String> genericNames = getTypeArguments().keySet();
+        if (genericNames.size() != typeArguments.size()) {
+            throw new IllegalStateException("Expected to have: " + genericNames.size() + " type arguments! Got: " + typeArguments.size());
+        }
+        Map<String, ClassElement> boundByName = CollectionUtils.newLinkedHashMap(typeArguments.size());
+        Iterator<String> keys = genericNames.iterator();
+        Iterator<? extends ClassElement> args = typeArguments.iterator();
+        while (keys.hasNext() && args.hasNext()) {
+            ClassElement next = args.next();
+            Object nativeType = next.getNativeType();
+            if (nativeType instanceof Class<?> aClass) {
+                next = visitorContext.getClassElement(aClass).orElse(next);
+            }
+            boundByName.put(keys.next(), next);
+        }
+        return withTypeArguments(boundByName);
     }
 
     @Override
@@ -135,266 +249,20 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
 
     @Override
     public <T extends Element> List<T> getEnclosedElements(@NonNull ElementQuery<T> query) {
-        Objects.requireNonNull(query, "Query cannot be null");
-        ElementQuery.Result<T> result = query.result();
-        boolean onlyDeclared = result.isOnlyDeclared();
-        boolean onlyAccessible = result.isOnlyAccessible();
-        boolean onlyAbstract = result.isOnlyAbstract();
-        boolean onlyConcrete = result.isOnlyConcrete();
-        boolean onlyInstance = result.isOnlyInstance();
-        List<Predicate<String>> namePredicates = result.getNamePredicates();
-        List<Predicate<ClassElement>> typePredicates = result.getTypePredicates();
-        List<Predicate<AnnotationMetadata>> annotationPredicates = result.getAnnotationPredicates();
-        List<Predicate<T>> elementPredicates = result.getElementPredicates();
-        List<Predicate<Set<ElementModifier>>> modifierPredicates = result.getModifierPredicates();
-        List<T> elements;
-        Class<T> elementType = result.getElementType();
-        if (elementType == MethodElement.class) {
-
-            List<MethodNode> methods;
-            Map<String, MethodNode> declaredMethodsMap = classNode.getDeclaredMethodsMap();
-            ClassNodeUtils.addDeclaredMethodsFromInterfaces(classNode, declaredMethodsMap);
-            if (onlyDeclared) {
-                methods = new ArrayList<>(classNode.getMethods());
-            } else {
-                methods = new ArrayList<>(classNode.getAllDeclaredMethods());
-            }
-
-            Iterator<MethodNode> i = methods.iterator();
-            while (i.hasNext()) {
-                MethodNode methodNode = i.next();
-                if (JUNK_METHOD_FILTER.test(methodNode)) {
-                    i.remove();
-                    continue;
-                }
-                if (onlyAbstract && !methodNode.isAbstract()) {
-                    i.remove();
-                    continue;
-                }
-                if (onlyConcrete && methodNode.isAbstract()) {
-                    i.remove();
-                    continue;
-                }
-                if (onlyInstance && methodNode.isStatic()) {
-                    i.remove();
-                    continue;
-                }
-                if (onlyAccessible) {
-                    final ClassElement accessibleFromType = result.getOnlyAccessibleFromType().orElse(this);
-                    if (methodNode.isPrivate()) {
-                        i.remove();
-                        continue;
-                    } else if (!methodNode.getDeclaringClass().getName().equals(accessibleFromType.getName())) {
-                        // inaccessible through package scope
-                        if (methodNode.isPackageScope() && !methodNode.getDeclaringClass().getPackageName().equals(accessibleFromType.getPackageName())) {
-                            i.remove();
-                            continue;
-                        }
-                    }
-                }
-                if (!modifierPredicates.isEmpty()) {
-                    Set<ElementModifier> elementModifiers = resolveModifiers(methodNode);
-                    if (!modifierPredicates.stream().allMatch(p -> p.test(elementModifiers))) {
-                        i.remove();
-                        continue;
-                    }
-                }
-
-                if (!namePredicates.isEmpty()) {
-                    if (!namePredicates.stream().allMatch(p -> p.test(methodNode.getName()))) {
-                        i.remove();
-                    }
-                }
-            }
-
-            //noinspection unchecked
-            elements = methods.stream().map(methodNode -> (T) new GroovyMethodElement(
-                    this,
-                    visitorContext,
-                    methodNode,
-                    AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, methodNode)
-            )).collect(Collectors.toList());
-
-            if (!typePredicates.isEmpty()) {
-                elements.removeIf(e -> !typePredicates.stream().allMatch(p -> p.test(((MethodElement) e).getGenericReturnType())));
-            }
-        } else if (elementType == ConstructorElement.class) {
-            List<ConstructorNode> constructors = new ArrayList<>(classNode.getDeclaredConstructors());
-            if (!onlyDeclared) {
-                ClassNode superClass = classNode.getSuperClass();
-                while (superClass != null) {
-                    // don't include constructors on enum, record... – matches behavior of JavaClassElement
-                    if (superClass.getPackageName().equals("java.lang")) {
-                        break;
-                    }
-                    constructors.addAll(superClass.getDeclaredConstructors());
-                    superClass = superClass.getSuperClass();
-                }
-            }
-            for (Iterator<ConstructorNode> i = constructors.iterator(); i.hasNext(); ) {
-                ConstructorNode constructor = i.next();
-                // we don't listen to the user here, we never return static initializers. This matches behavior of JavaClassElement
-                if (constructor.isStatic()) {
-                    i.remove();
-                    continue;
-                }
-                if (onlyAccessible) {
-                    final ClassElement accessibleFromType = result.getOnlyAccessibleFromType().orElse(this);
-                    if (constructor.isPrivate()) {
-                        i.remove();
-                        continue;
-                    } else if (!constructor.getDeclaringClass().getName().equals(accessibleFromType.getName())) {
-                        // inaccessible through package scope
-                        if (constructor.isPackageScope() && !constructor.getDeclaringClass().getPackageName().equals(accessibleFromType.getPackageName())) {
-                            i.remove();
-                            continue;
-                        }
-                    }
-                }
-                if (!modifierPredicates.isEmpty()) {
-                    Set<ElementModifier> elementModifiers = resolveModifiers(constructor);
-                    if (!modifierPredicates.stream().allMatch(p -> p.test(elementModifiers))) {
-                        i.remove();
-                    }
-                }
-            }
-
-            //noinspection unchecked
-            elements = constructors.stream().map(constructorNode -> (T) new GroovyConstructorElement(
-                    this,
-                    visitorContext,
-                    constructorNode,
-                    AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, constructorNode)
-            )).collect(Collectors.toList());
-        } else if (elementType == FieldElement.class) {
-            List<FieldNode> fields;
-            if (onlyDeclared) {
-                List<FieldNode> initialFields = classNode.getFields();
-                fields = findRelevantFields(onlyAccessible, result.getOnlyAccessibleFromType().orElse(this), initialFields, namePredicates, modifierPredicates);
-            } else {
-                fields = new ArrayList<>(classNode.getFields());
-                ClassNode superClass = classNode.getSuperClass();
-                while (superClass != null && !superClass.equals(ClassHelper.OBJECT_TYPE)) {
-                    fields.addAll(superClass.getFields());
-                    superClass = superClass.getSuperClass();
-                }
-                fields = findRelevantFields(onlyAccessible, result.getOnlyAccessibleFromType().orElse(this), fields, namePredicates, modifierPredicates);
-            }
-            //noinspection unchecked
-            Stream<FieldNode> fieldStream = fields.stream();
-            if (onlyInstance) {
-                fieldStream = fieldStream.filter((fn) -> !fn.isStatic());
-            }
-            elements = fieldStream.map(fieldNode -> (T) new GroovyFieldElement(
-                    visitorContext,
-                    fieldNode,
-                    fieldNode,
-                    AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, fieldNode)
-            )).collect(Collectors.toList());
-
-            if (!typePredicates.isEmpty()) {
-                elements.removeIf(e -> !typePredicates.stream().allMatch(p -> p.test(((FieldElement) e).getGenericField())));
-            }
-        } else if (elementType == ClassElement.class) {
-            Iterator<InnerClassNode> i = classNode.getInnerClasses();
-            List<T> innerClasses = new ArrayList<>();
-            while (i.hasNext()) {
-                InnerClassNode innerClassNode = i.next();
-                if (onlyAbstract && !innerClassNode.isAbstract()) {
-                    continue;
-                }
-                if (onlyConcrete && innerClassNode.isAbstract()) {
-                    continue;
-                }
-                if (onlyAccessible) {
-                    if (Modifier.isPrivate(innerClassNode.getModifiers())) {
-                        continue;
-                    }
-                }
-                if (!modifierPredicates.isEmpty()) {
-                    Set<ElementModifier> elementModifiers = resolveModifiers(innerClassNode);
-                    if (!modifierPredicates.stream().allMatch(p -> p.test(elementModifiers))) {
-                        continue;
-                    }
-                }
-
-                if (!namePredicates.isEmpty()) {
-                    if (!namePredicates.stream().allMatch(p -> p.test(innerClassNode.getName()))) {
-                        continue;
-                    }
-                }
-                ClassElement classElement = visitorContext.getElementFactory()
-                        .newClassElement(innerClassNode, AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, innerClassNode));
-
-                if (!typePredicates.isEmpty()) {
-                    if (!typePredicates.stream().allMatch(p -> p.test(classElement))) {
-                        continue;
-                    }
-                }
-
-                innerClasses.add((T) classElement);
-            }
-            elements = innerClasses;
-        } else {
-            elements = Collections.emptyList();
-        }
-        if (!elements.isEmpty()) {
-            if (!annotationPredicates.isEmpty()) {
-                elements.removeIf(e -> !annotationPredicates.stream().allMatch(p -> p.test(e.getAnnotationMetadata())));
-            }
-
-            if (!elements.isEmpty() && !elementPredicates.isEmpty()) {
-                elements.removeIf(e -> !elementPredicates.stream().allMatch(p -> p.test(e)));
-            }
-        }
-        return elements;
+        return groovyEnclosedElementsQuery.getEnclosedElements(this, query);
     }
 
-    private List<FieldNode> findRelevantFields(
-            boolean onlyAccessible,
-            ClassElement onlyAccessibleType,
-            List<FieldNode> initialFields,
-            List<Predicate<String>> namePredicates,
-            List<Predicate<Set<ElementModifier>>> modifierPredicates) {
-        List<FieldNode> filteredFields = new ArrayList<>(initialFields.size());
-
-        elementLoop:
-        for (FieldNode fn: initialFields) {
-            if (JUNK_FIELD_FILTER.test(fn)) {
-                continue;
-            }
-            if (onlyAccessible && fn.isPrivate()) {
-                continue;
-            } else if (onlyAccessible && isPackageScope(fn)) {
-                if (!fn.getDeclaringClass().getPackageName().equals(onlyAccessibleType.getPackageName())) {
-                    continue;
-                }
-            }
-            if (!modifierPredicates.isEmpty()) {
-                final Set<ElementModifier> elementModifiers = resolveModifiers(fn);
-                for (Predicate<Set<ElementModifier>> modifierPredicate : modifierPredicates) {
-                    if (!modifierPredicate.test(elementModifiers)) {
-                        continue elementLoop;
-                    }
-                }
-            }
-
-            if (!namePredicates.isEmpty()) {
-                String name = fn.getName();
-                for (Predicate<String> namePredicate : namePredicates) {
-                    if (!namePredicate.test(name)) {
-                        continue elementLoop;
-                    }
-                }
-            }
-
-            filteredFields.add(fn);
-        }
-        return filteredFields;
-    }
-
-    private boolean isPackageScope(FieldNode fn) {
-        return (fn.getModifiers() & (ACC_PUBLIC | ACC_PRIVATE | ACC_PROTECTED)) == 0;
+    /**
+     * This method will produce th elements just like {@link #getEnclosedElements(ElementQuery)}
+     * but the elements are constructed as the source ones.
+     * {@link io.micronaut.inject.ast.ElementFactory#newSourceMethodElement(ClassElement, Object, ElementAnnotationMetadataFactory)}.
+     *
+     * @param query The query
+     * @param <T>   The element type
+     * @return The list of elements
+     */
+    public final <T extends Element> List<T> getSourceEnclosedElements(@NonNull ElementQuery<T> query) {
+        return groovySourceEnclosedElementsQuery.getEnclosedElements(this, query);
     }
 
     @Override
@@ -410,20 +278,7 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
     @Override
     public Optional<ClassElement> getEnclosingType() {
         if (isInner()) {
-            ClassNode outerClass = classNode.getOuterClass();
-            if (outerClass != null) {
-                return Optional.of(
-                        visitorContext.getElementFactory()
-                            .newClassElement(
-                                    outerClass,
-                                    AstAnnotationUtils.getAnnotationMetadata(
-                                            sourceUnit,
-                                            compilationUnit,
-                                            outerClass
-                                    )
-                            )
-                );
-            }
+            return Optional.ofNullable(classNode.getOuterClass()).map(inner -> newClassElement(inner, getTypeArguments()));
         }
         return Optional.empty();
     }
@@ -442,24 +297,19 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
     public Collection<ClassElement> getInterfaces() {
         final ClassNode[] interfaces = classNode.getInterfaces();
         if (ArrayUtils.isNotEmpty(interfaces)) {
-            return Arrays.stream(interfaces).map((cn) -> visitorContext.getElementFactory().newClassElement(
-                    cn,
-                    AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, cn)
-            )).collect(Collectors.toList());
+            return Arrays.stream(interfaces)
+                    .filter(inf -> !inf.getName().equals("groovy.lang.GroovyObject"))
+                    .map(inf -> newClassElement(inf, getTypeArguments()))
+                    .toList();
         }
         return Collections.emptyList();
     }
 
     @Override
     public Optional<ClassElement> getSuperType() {
-        final ClassNode superClass = classNode.getUnresolvedSuperClass(false);
+        final ClassNode superClass = classNode.getUnresolvedSuperClass();
         if (superClass != null && !superClass.equals(ClassHelper.OBJECT_TYPE)) {
-            return Optional.of(
-                    visitorContext.getElementFactory().newClassElement(
-                            superClass,
-                            AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, superClass)
-                    )
-            );
+            return Optional.of(newClassElement(superClass, getTypeArguments()));
         }
         return Optional.empty();
     }
@@ -467,213 +317,183 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
     @NonNull
     @Override
     public Optional<MethodElement> getPrimaryConstructor() {
-        MethodNode method = findStaticCreator();
-        if (method == null) {
-            method = findConcreteConstructor();
+        Optional<MethodElement> primaryConstructor = ArrayableClassElement.super.getPrimaryConstructor();
+        if (primaryConstructor.isPresent()) {
+            return primaryConstructor;
         }
-
-        return createMethodElement(method);
+        return possibleDefaultEmptyConstructor();
     }
 
-    @NonNull
     @Override
     public Optional<MethodElement> getDefaultConstructor() {
-        MethodNode method = findDefaultStaticCreator();
-        if (method == null) {
-            method = findDefaultConstructor();
+        Optional<MethodElement> defaultConstructor = ArrayableClassElement.super.getDefaultConstructor();
+        if (defaultConstructor.isPresent()) {
+            return defaultConstructor;
         }
-        return createMethodElement(method);
+        return possibleDefaultEmptyConstructor();
+    }
+
+    private Optional<MethodElement> possibleDefaultEmptyConstructor() {
+        List<ConstructorNode> constructors = classNode.getDeclaredConstructors();
+        if (CollectionUtils.isEmpty(constructors) && !classNode.isAbstract() && !classNode.isEnum()) {
+            // empty default constructor
+            return createMethodElement(new ConstructorNode(Modifier.PUBLIC, new BlockStatement()));
+        }
+        return Optional.empty();
     }
 
     private Optional<MethodElement> createMethodElement(MethodNode method) {
         return Optional.ofNullable(method).map(executableElement -> {
-
-            final AnnotationMetadata annotationMetadata = AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, executableElement);
             if (executableElement instanceof ConstructorNode) {
-                return new GroovyConstructorElement(this, visitorContext, (ConstructorNode) executableElement, annotationMetadata);
+                return visitorContext.getElementFactory().newConstructorElement(this, executableElement, elementAnnotationMetadataFactory);
             } else {
-                return new GroovyMethodElement(this, visitorContext, executableElement, annotationMetadata);
+                return visitorContext.getElementFactory().newMethodElement(this, executableElement, elementAnnotationMetadataFactory);
             }
         });
     }
 
-    /**
-     * Builds and returns the generic type information.
-     *
-     * @return The generic type info
-     */
-    public Map<String, Map<String, ClassNode>> getGenericTypeInfo() {
-        if (genericInfo == null) {
-            genericInfo = AstGenericUtils.buildAllGenericElementInfo(classNode, new GroovyVisitorContext(sourceUnit, compilationUnit));
-        }
-        return genericInfo;
-    }
-
-    @NonNull
     @Override
-    public Map<String, ClassElement> getTypeArguments(@NonNull String type) {
-        Map<String, Map<String, ClassNode>> allData = getGenericTypeInfo();
-
-        Map<String, ClassNode> thisSpec = allData.get(getName());
-        Map<String, ClassNode> forType = allData.get(type);
-        if (forType != null) {
-            Map<String, ClassElement> typeArgs = new LinkedHashMap<>(forType.size());
-            for (Map.Entry<String, ClassNode> entry : forType.entrySet()) {
-                ClassNode classNode = entry.getValue();
-
-                AnnotationMetadata annotationMetadata = resolveAnnotationMetadata(classNode);
-                ClassElement rawElement = visitorContext.getElementFactory().newClassElement(classNode, annotationMetadata);
-                if (thisSpec != null) {
-                    rawElement = getGenericElement(sourceUnit, classNode, rawElement, thisSpec);
-                }
-                typeArgs.put(entry.getKey(), rawElement);
-            }
-            return Collections.unmodifiableMap(typeArgs);
-        }
-
-        return Collections.emptyMap();
-    }
-
     @NonNull
-    @Override
-    public Map<String, Map<String, ClassElement>> getAllTypeArguments() {
-        Map<String, Map<String, ClassNode>> genericInfo =
-                AstGenericUtils.buildAllGenericElementInfo(classNode, new GroovyVisitorContext(sourceUnit, compilationUnit));
-        Map<String, Map<String, ClassElement>> results = new LinkedHashMap<>(genericInfo.size());
-
-        genericInfo.forEach((name, generics) -> {
-            Map<String, ClassElement> resolved = new LinkedHashMap<>(generics.size());
-            generics.forEach((variable, type) -> {
-                AnnotationMetadata annotationMetadata = resolveAnnotationMetadata(type);
-                resolved.put(variable, new GroovyClassElement(visitorContext, type, annotationMetadata));
-            });
-            results.put(name, resolved);
-        });
-        results.put(getName(), getTypeArguments());
-        return results;
+    public Map<String, ClassElement> getTypeArguments() {
+        if (resolvedTypeArguments == null) {
+            resolvedTypeArguments = resolveClassTypeArguments(getNativeType(), classNode, Collections.emptyMap(), new HashSet<>());
+        }
+        return resolvedTypeArguments;
     }
 
     @Override
-    public @NonNull
-    Map<String, ClassElement> getTypeArguments() {
-        Map<String, Map<String, ClassNode>> genericInfo = getGenericTypeInfo();
-        Map<String, ClassNode> info = genericInfo.get(classNode.getName());
-        return resolveGenericMap(info);
+    public List<PropertyElement> getSyntheticBeanProperties() {
+        // Native properties should be composed of field + synthetic getter/setter
+        if (nativeProperties == null) {
+            PropertyElementQuery configuration = new PropertyElementQuery();
+            configuration.allowStaticProperties(true);
+            Set<String> nativeProps = getPropertyNodes().stream().map(PropertyNode::getName).collect(Collectors.toCollection(LinkedHashSet::new));
+            nativeProperties = AstBeanPropertiesUtils.resolveBeanProperties(configuration,
+                    this,
+                    () -> getEnclosedElements(ElementQuery.ALL_METHODS.onlyInstance()),
+                    () -> getPropertyNodes().stream().map(propertyNode -> visitorContext.getElementFactory().newFieldElement(this, propertyNode.getField(), elementAnnotationMetadataFactory)).collect(Collectors.toList()),
+                    true,
+                    nativeProps,
+                    methodElement -> Optional.empty(),
+                    methodElement -> Optional.empty(),
+                    value -> mapPropertyElement(nativeProps, value, configuration, true));
+        }
+        return nativeProperties;
     }
 
-    @NonNull
-    private Map<String, ClassElement> resolveGenericMap(Map<String, ClassNode> info) {
-        if (info != null) {
-            Map<String, ClassElement> typeArgumentMap = new LinkedHashMap<>(info.size());
-            GenericsType[] genericsTypes = classNode.getGenericsTypes();
-            GenericsType[] redirectTypes = classNode.redirect().getGenericsTypes();
-            if (genericsTypes != null && redirectTypes != null && genericsTypes.length == redirectTypes.length) {
-                for (int i = 0; i < genericsTypes.length; i++) {
-                    GenericsType gt = genericsTypes[i];
-                    GenericsType redirectType = redirectTypes[i];
-                    if (gt.isPlaceholder()) {
-                        ClassNode cn = resolveTypeArgument(info, redirectType.getName());
-                        if (cn != null) {
-                            Map<String, ClassNode> newInfo = alignNewGenericsInfo(genericsTypes, redirectTypes, info);
-                            AnnotationMetadata annotationMetadata = resolveAnnotationMetadata(cn);
-                            typeArgumentMap.put(redirectType.getName(), new GroovyClassElement(
-                                    visitorContext,
-                                    cn,
-                                    annotationMetadata,
-                                    Collections.singletonMap(cn.getName(), newInfo),
-                                    cn.isArray() ? computeDimensions(cn) : 0,
-                                    true
-                            ));
-                        }
-                    } else {
-                        ClassNode type;
-                        String unresolvedName = redirectType.getType().getUnresolvedName();
-                        ClassNode cn = info.get(unresolvedName);
-                        if (cn != null) {
-                            type = cn;
-                        } else {
-                            type = gt.getType();
-                        }
-                        AnnotationMetadata annotationMetadata = resolveAnnotationMetadata(type);
-                        typeArgumentMap.put(redirectType.getName(), new GroovyClassElement(
-                                visitorContext,
-                                type,
-                                annotationMetadata,
-                                Collections.emptyMap(),
-                                type.isArray() ? computeDimensions(type) : 0
-                        ));
-                    }
-                }
-            } else if (redirectTypes != null) {
-
-                for (GenericsType gt : redirectTypes) {
-                    String name = gt.getName();
-                    ClassNode cn = resolveTypeArgument(info, name);
-                    if (cn != null) {
-                        Map<String, ClassNode> newInfo = Collections.emptyMap();
-                        if (genericsTypes != null) {
-                            newInfo = alignNewGenericsInfo(genericsTypes, redirectTypes, info);
-                        }
-                        AnnotationMetadata annotationMetadata = resolveAnnotationMetadata(cn);
-                        typeArgumentMap.put(gt.getName(), new GroovyClassElement(
-                                visitorContext,
-                                cn,
-                                annotationMetadata,
-                                Collections.singletonMap(cn.getName(), newInfo),
-                                cn.isArray() ? computeDimensions(cn) : 0
-                        ));
-                    }
-                }
-            }
-            if (CollectionUtils.isNotEmpty(typeArgumentMap)) {
-                return typeArgumentMap;
-            }
-        }
-        Map<String, ClassNode> spec = AstGenericUtils.createGenericsSpec(classNode);
-        if (!spec.isEmpty()) {
-            Map<String, ClassElement> map = new LinkedHashMap<>(spec.size());
-            for (Map.Entry<String, ClassNode> entry : spec.entrySet()) {
-                ClassNode cn = entry.getValue();
-                AnnotationMetadata annotationMetadata = resolveAnnotationMetadata(cn);
-                ClassElement classElement = visitorContext.getElementFactory().newClassElement(cn, annotationMetadata);
-                map.put(entry.getKey(), classElement);
-            }
-            return Collections.unmodifiableMap(map);
-        }
-        return Collections.emptyMap();
-    }
-
-    @Nullable
-    private ClassNode resolveTypeArgument(Map<String, ClassNode> info, String name) {
-        ClassNode cn = info.get(name);
-        while (cn != null && cn.isGenericsPlaceHolder()) {
-            name = cn.getUnresolvedName();
-            ClassNode next = info.get(name);
-            if (next == cn) {
-                break;
-            }
-            cn = next;
-        }
-        return cn;
-    }
-
-    private int computeDimensions(ClassNode cn) {
-        ClassNode componentType = cn.getComponentType();
-        int i = 1;
-        while (componentType != null && componentType.isArray()) {
-            i++;
-            componentType = componentType.getComponentType();
-        }
-        return i;
+    @Override
+    public List<PropertyElement> getBeanProperties(PropertyElementQuery propertyElementQuery) {
+        Set<String> nativeProps = getPropertyNodes().stream().map(PropertyNode::getName).collect(Collectors.toCollection(LinkedHashSet::new));
+        return AstBeanPropertiesUtils.resolveBeanProperties(propertyElementQuery,
+                this,
+                () -> getEnclosedElements(ElementQuery.ALL_METHODS.onlyInstance()),
+                () -> getEnclosedElements(ElementQuery.ALL_FIELDS),
+                true,
+                nativeProps,
+                methodElement -> Optional.empty(),
+                methodElement -> Optional.empty(),
+                value -> mapPropertyElement(nativeProps, value, propertyElementQuery, false));
     }
 
     @Override
     public List<PropertyElement> getBeanProperties() {
-        List<PropertyElement> allProperties = new ArrayList<>();
-        List<GroovyPropertyElement> propertyElements = getPropertyNodes();
-        allProperties.addAll(propertyElements);
-        allProperties.addAll(getPropertiesFromGettersAndSetters(propertyElements));
-        return Collections.unmodifiableList(allProperties);
+        if (properties == null) {
+            properties = getBeanProperties(PropertyElementQuery.of(this));
+        }
+        return properties;
+    }
+
+    @Nullable
+    private GroovyPropertyElement mapPropertyElement(Set<String> nativeProps,
+                                                     AstBeanPropertiesUtils.BeanPropertyData value,
+                                                     PropertyElementQuery conf,
+                                                     boolean nativePropertiesOnly) {
+        if (value.type == null) {
+            // withSomething() builder setter
+            value.type = PrimitiveElement.VOID;
+        }
+        AtomicReference<AnnotationMetadataProvider> ref = new AtomicReference<>();
+        if (conf.getAccessKinds().contains(BeanProperties.AccessKind.METHOD) && nativeProps.remove(value.propertyName)) {
+            AnnotationMetadataProvider methodAnnotationMetadataProvider = new AnnotationMetadataProvider() {
+                @Override
+                public AnnotationMetadata getAnnotationMetadata() {
+                    return ref.get().getAnnotationMetadata();
+                }
+            };
+            AnnotationMetadataProvider annotationMetadataProvider = new AnnotationMetadataProvider() {
+                @Override
+                public AnnotationMetadata getAnnotationMetadata() {
+                    return new AnnotationMetadataHierarchy(GroovyClassElement.this, ref.get().getAnnotationMetadata());
+                }
+            };
+            if (nativePropertiesOnly && value.field == null) {
+                return null;
+            }
+            if (value.field != null && value.readAccessKind != BeanProperties.AccessKind.METHOD) {
+                String getterName = NameUtils.getterNameFor(
+                        value.propertyName,
+                        value.type.equals(PrimitiveElement.BOOLEAN)
+                );
+                value.getter = MethodElement.of(
+                        this,
+                        value.field.getDeclaringType(),
+                        methodAnnotationMetadataProvider,
+                        annotationMetadataProvider,
+                        visitorContext.getAnnotationMetadataBuilder(),
+                        value.field.getGenericType(),
+                        value.field.getGenericType(),
+                        getterName,
+                        value.field.isStatic(),
+                        value.field.isFinal()
+                );
+                value.readAccessKind = BeanProperties.AccessKind.METHOD;
+            } else if (nativePropertiesOnly) {
+                value.getter = null;
+                value.readAccessKind = null;
+            }
+            if (value.field != null && !value.field.isFinal() && value.writeAccessKind != BeanProperties.AccessKind.METHOD) {
+                value.setter = MethodElement.of(
+                        this,
+                        value.field.getDeclaringType(),
+                        methodAnnotationMetadataProvider,
+                        annotationMetadataProvider,
+                        visitorContext.getAnnotationMetadataBuilder(),
+                        PrimitiveElement.VOID,
+                        PrimitiveElement.VOID,
+                        NameUtils.setterNameFor(value.propertyName),
+                        value.field.isStatic(),
+                        value.field.isFinal(),
+                        ParameterElement.of(value.field.getGenericType(), value.propertyName, methodAnnotationMetadataProvider, visitorContext.getAnnotationMetadataBuilder())
+                );
+                value.writeAccessKind = BeanProperties.AccessKind.METHOD;
+            } else if (nativePropertiesOnly) {
+                value.setter = null;
+                value.writeAccessKind = null;
+            }
+        } else if (nativePropertiesOnly) {
+            return null;
+        }
+        // Skip not accessible setters / getters
+        if (value.writeAccessKind != BeanProperties.AccessKind.METHOD) {
+            value.setter = null;
+        }
+        if (value.readAccessKind != BeanProperties.AccessKind.METHOD) {
+            value.getter = null;
+        }
+        GroovyPropertyElement propertyElement = new GroovyPropertyElement(
+                visitorContext,
+                this,
+                value.type,
+                value.getter,
+                value.setter,
+                value.field,
+                elementAnnotationMetadataFactory,
+                value.propertyName,
+                value.readAccessKind == null ? PropertyElement.AccessKind.METHOD : PropertyElement.AccessKind.valueOf(value.readAccessKind.name()),
+                value.writeAccessKind == null ? PropertyElement.AccessKind.METHOD : PropertyElement.AccessKind.valueOf(value.writeAccessKind.name()),
+                value.isExcluded);
+        ref.set(propertyElement);
+        return propertyElement;
     }
 
     @Override
@@ -683,7 +503,7 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
 
     @Override
     public ClassElement withArrayDimensions(int arrayDimensions) {
-        return new GroovyClassElement(visitorContext, classNode, getAnnotationMetadata(), getGenericTypeInfo(), arrayDimensions);
+        return new GroovyClassElement(visitorContext, getNativeType(), elementAnnotationMetadataFactory, resolvedTypeArguments, arrayDimensions);
     }
 
     @Override
@@ -715,15 +535,10 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
     public PackageElement getPackage() {
         final PackageNode aPackage = classNode.getPackage();
         if (aPackage != null) {
-
             return new GroovyPackageElement(
                     visitorContext,
                     aPackage,
-                    AstAnnotationUtils.getAnnotationMetadata(
-                            sourceUnit,
-                            compilationUnit,
-                            aPackage
-                    )
+                    elementAnnotationMetadataFactory
             );
         } else {
             return PackageElement.DEFAULT_PACKAGE;
@@ -737,7 +552,9 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
 
     @Override
     public boolean isStatic() {
-        return classNode.isStaticClass();
+        // I assume Groovy can decide not to make the class static internally
+        // and isStaticClass will be false even if the class has a static modifier
+        return classNode.isStaticClass() || Modifier.isStatic(classNode.getModifiers());
     }
 
     @Override
@@ -761,11 +578,6 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
     }
 
     @Override
-    public Object getNativeType() {
-        return classNode;
-    }
-
-    @Override
     public boolean isAssignable(String type) {
         return AstClassUtils.isSubclassOfOrImplementsInterface(classNode, type);
     }
@@ -775,458 +587,233 @@ public class GroovyClassElement extends AbstractGroovyElement implements Arrayab
         return AstClassUtils.isSubclassOfOrImplementsInterface(classNode, type.getName());
     }
 
-    @NonNull
     @Override
-    public List<? extends ClassElement> getBoundGenericTypes() {
-        if (overrideBoundGenericTypes == null) {
-            overrideBoundGenericTypes = getBoundGenericTypes(classNode);
+    public Optional<ClassElement> getOptionalValueType() {
+        if (isAssignable(Optional.class)) {
+            return getFirstTypeArgument().or(() -> visitorContext.getClassElement(Object.class));
         }
-        return overrideBoundGenericTypes;
+        if (isAssignable(OptionalLong.class)) {
+            return visitorContext.getClassElement(Long.class);
+        }
+        if (isAssignable(OptionalDouble.class)) {
+            return visitorContext.getClassElement(Double.class);
+        }
+        if (isAssignable(OptionalInt.class)) {
+            return visitorContext.getClassElement(Integer.class);
+        }
+        return Optional.empty();
     }
 
     @NonNull
-    private List<? extends ClassElement> getBoundGenericTypes(ClassNode classNode) {
+    @Override
+    public List<? extends ClassElement> getBoundGenericTypes() {
         GenericsType[] genericsTypes = classNode.getGenericsTypes();
         if (genericsTypes == null) {
             return Collections.emptyList();
-        } else {
-            return Arrays.stream(genericsTypes)
-                    .map(cn -> {
-                        if (cn.isWildcard()) {
-                            List<GroovyClassElement> upperBounds;
-                            if (cn.getUpperBounds() != null && cn.getUpperBounds().length > 0) {
-                                upperBounds = Arrays.stream(cn.getUpperBounds())
-                                        .map(bound -> (GroovyClassElement) toClassElement(bound))
-                                        .collect(Collectors.toList());
-                            } else {
-                                upperBounds = Collections.singletonList((GroovyClassElement) visitorContext.getClassElement(Object.class).get());
-                            }
-                            List<GroovyClassElement> lowerBounds;
-                            if (cn.getLowerBound() == null) {
-                                lowerBounds = Collections.emptyList();
-                            } else {
-                                lowerBounds = Collections.singletonList((GroovyClassElement) toClassElement(cn.getLowerBound()));
-                            }
-                            return new GroovyWildcardElement(
-                                    upperBounds,
-                                    lowerBounds
-                            );
-                        } else {
-                            return toClassElement(cn.getType());
-                        }
-                    })
-                    .collect(Collectors.toList());
         }
+        return Arrays.stream(genericsTypes).map(gt -> newClassElement(gt)).toList();
     }
 
     @NonNull
     @Override
     public List<? extends GenericPlaceholderElement> getDeclaredGenericPlaceholders() {
         //noinspection unchecked
-        return (List<? extends GenericPlaceholderElement>) getBoundGenericTypes(classNode.redirect());
+        return (List<? extends GenericPlaceholderElement>) getBoundGenericTypes();
     }
 
-    protected final ClassElement toClassElement(ClassNode classNode) {
-        return visitorContext.getElementFactory().newClassElement(classNode, AnnotationMetadata.EMPTY_METADATA);
-    }
-
-    @NonNull
-    @Override
-    public ClassElement withBoundGenericTypes(@NonNull List<? extends ClassElement> typeArguments) {
-        // we can't create a new ClassNode, so we have to go this route.
-        GroovyClassElement copy = (GroovyClassElement) visitorContext.getElementFactory().newClassElement(classNode, getAnnotationMetadata());
-        copy.overrideBoundGenericTypes = typeArguments;
-        return copy;
-    }
-
-    private List<GroovyPropertyElement> getPropertyNodes() {
+    private List<PropertyNode> getPropertyNodes() {
         List<PropertyNode> propertyNodes = new ArrayList<>();
         ClassNode classNode = this.classNode;
         while (classNode != null && !classNode.equals(ClassHelper.OBJECT_TYPE) && !classNode.equals(ClassHelper.Enum_Type)) {
             propertyNodes.addAll(classNode.getProperties());
             classNode = classNode.getSuperClass();
         }
-        List<GroovyPropertyElement> propertyElements = new ArrayList<>();
+        List<PropertyNode> propertyElements = new ArrayList<>();
         for (PropertyNode propertyNode : propertyNodes) {
-            if (propertyNode.isPublic() && !propertyNode.isStatic()) {
-                final String propertyName = propertyNode.getName();
-                boolean readOnly = propertyNode.getField().isFinal();
-                final AnnotationMetadata annotationMetadata =
-                        AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, propertyNode.getField());
-                GroovyPropertyElement groovyPropertyElement = new GroovyPropertyElement(
-                        visitorContext,
-                        this,
-                        propertyNode.getField(),
-                        annotationMetadata,
-                        propertyName,
-                        readOnly,
-                        propertyNode
-                ) {
-
-                    final String[] readPrefixes = GroovyClassElement.this.getValue(AccessorsStyle.class, "readPrefixes", String[].class)
-                            .orElse(new String[]{AccessorsStyle.DEFAULT_READ_PREFIX});
-                    final String[] writePrefixes = GroovyClassElement.this.getValue(AccessorsStyle.class, "writePrefixes", String[].class)
-                            .orElse(new String[]{AccessorsStyle.DEFAULT_WRITE_PREFIX});
-
-                    @NonNull
-                    @Override
-                    public ClassElement getType() {
-                        ClassNode type = propertyNode.getType();
-                        return visitorContext.getElementFactory().newClassElement(type,
-                                AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, type));
-                    }
-
-                    @Override
-                    public Optional<MethodElement> getWriteMethod() {
-                        if (!readOnly) {
-                            return Optional.of(MethodElement.of(
-                                    GroovyClassElement.this,
-                                    annotationMetadata,
-                                    PrimitiveElement.VOID,
-                                    PrimitiveElement.VOID,
-                                    NameUtils.setterNameFor(propertyName, writePrefixes),
-                                    ParameterElement.of(getType(), propertyName)
-
-                            ));
-                        }
-                        return Optional.empty();
-                    }
-
-                    @Override
-                    public Optional<MethodElement> getReadMethod() {
-                        return Optional.of(MethodElement.of(
-                                GroovyClassElement.this,
-                                annotationMetadata,
-                                getType(),
-                                getGenericType(),
-                                getGetterName(propertyName, getType())
-                        ));
-                    }
-
-                    private String getGetterName(String propertyName, ClassElement type) {
-                        return NameUtils.getterNameFor(
-                                propertyName,
-                                type.equals(PrimitiveElement.BOOLEAN) || type.getName().equals(Boolean.class.getName())
-                        );
-                    }
-                };
-                propertyElements.add(groovyPropertyElement);
+            if (propertyNode.isPublic()) {
+                propertyElements.add(propertyNode);
             }
         }
         return propertyElements;
     }
 
-    private List<GroovyPropertyElement> getPropertiesFromGettersAndSetters(List<GroovyPropertyElement> propertyNodes) {
-        Set<String> groovyProps = propertyNodes.stream().map(PropertyElement::getName).collect(Collectors.toSet());
-        Map<String, GetterAndSetter> props = new LinkedHashMap<>();
-        ClassNode classNode = this.classNode;
-        while (classNode != null && !classNode.equals(ClassHelper.OBJECT_TYPE) && !classNode.equals(ClassHelper.Enum_Type)) {
-
-            ClassNode finalClassNode = classNode;
-            classNode.visitContents(
-                    new PublicMethodVisitor(null) {
-
-                        final String[] readPrefixes = getValue(AccessorsStyle.class, "readPrefixes", String[].class)
-                                .orElse(new String[]{AccessorsStyle.DEFAULT_READ_PREFIX});
-                        final String[] writePrefixes = getValue(AccessorsStyle.class, "writePrefixes", String[].class)
-                                .orElse(new String[]{AccessorsStyle.DEFAULT_WRITE_PREFIX});
-
-                        @Override
-                        protected boolean isAcceptable(MethodNode node) {
-                            boolean validModifiers = node.isPublic() && !node.isStatic() && !node.isSynthetic() && (!node.isAbstract() || finalClassNode.isInterface());
-                            if (validModifiers) {
-                                String methodName = node.getName();
-                                if (methodName.contains("$") || methodName.equals("getMetaClass")) {
-                                    return false;
-                                }
-
-                                if (NameUtils.isReaderName(methodName, readPrefixes) && node.getParameters().length == 0) {
-                                    return true;
-                                } else {
-                                    return NameUtils.isWriterName(methodName, writePrefixes) && node.getParameters().length == 1;
-                                }
-                            }
-                            return validModifiers;
-                        }
-
-                        @Override
-                        public void accept(ClassNode classNode, MethodNode node) {
-                            String methodName = node.getName();
-                            final ClassNode declaringTypeElement = node.getDeclaringClass();
-                            if (NameUtils.isReaderName(methodName, readPrefixes) && node.getParameters().length == 0) {
-                                String propertyName = NameUtils.getPropertyNameForGetter(methodName, readPrefixes);
-                                if (groovyProps.contains(propertyName)) {
-                                    return;
-                                }
-                                ClassNode returnTypeNode = node.getReturnType();
-                                ClassElement getterReturnType = null;
-                                if (returnTypeNode.isGenericsPlaceHolder()) {
-                                    final String placeHolderName = returnTypeNode.getUnresolvedName();
-                                    final ClassElement classElement = getTypeArguments().get(placeHolderName);
-                                    if (classElement != null) {
-                                        getterReturnType = classElement;
-                                    }
-                                }
-                                if (getterReturnType == null) {
-                                    getterReturnType = visitorContext.getElementFactory().newClassElement(returnTypeNode, AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, returnTypeNode));
-                                }
-
-                                GetterAndSetter getterAndSetter = props.computeIfAbsent(propertyName, GetterAndSetter::new);
-                                configureDeclaringType(declaringTypeElement, getterAndSetter);
-                                getterAndSetter.type = getterReturnType;
-                                getterAndSetter.getter = node;
-                                if (getterAndSetter.setter != null) {
-                                    ClassNode typeMirror = getterAndSetter.setter.getParameters()[0].getType();
-                                    ClassElement setterParameterType = visitorContext.getElementFactory().newClassElement(typeMirror, AnnotationMetadata.EMPTY_METADATA);
-                                    if (!setterParameterType.getName().equals(getterReturnType.getName())) {
-                                        getterAndSetter.setter = null; // not a compatible setter
-                                    }
-                                }
-                            } else if (NameUtils.isWriterName(methodName, writePrefixes) && node.getParameters().length == 1) {
-                                String propertyName = NameUtils.getPropertyNameForSetter(methodName, writePrefixes);
-                                if (groovyProps.contains(propertyName)) {
-                                    return;
-                                }
-                                ClassNode typeMirror = node.getParameters()[0].getType();
-                                ClassElement setterParameterType = visitorContext.getElementFactory().newClassElement(typeMirror, AnnotationMetadata.EMPTY_METADATA);
-
-                                GetterAndSetter getterAndSetter = props.computeIfAbsent(propertyName, GetterAndSetter::new);
-                                configureDeclaringType(declaringTypeElement, getterAndSetter);
-                                ClassElement propertyType = getterAndSetter.type;
-                                if (propertyType != null) {
-                                    if (propertyType.getName().equals(setterParameterType.getName())) {
-                                        getterAndSetter.setter = node;
-                                    }
-                                } else {
-                                    getterAndSetter.setter = node;
-                                }
-                            }
-                        }
-
-                        private void configureDeclaringType(ClassNode declaringTypeElement, GetterAndSetter beanPropertyData) {
-                            if (beanPropertyData.declaringType == null) {
-                                if (GroovyClassElement.this.classNode.equals(declaringTypeElement)) {
-                                    beanPropertyData.declaringType = GroovyClassElement.this;
-                                } else {
-                                    beanPropertyData.declaringType = new GroovyClassElement(
-                                            visitorContext,
-                                            declaringTypeElement,
-                                            AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, declaringTypeElement)
-                                    );
-                                }
-                            }
-                        }
-                    });
-            classNode = classNode.getSuperClass();
+    @Override
+    public ClassElement getType() {
+        if (theType == null) {
+            GroovyNativeElement nativeType = getNativeType();
+            ClassNode thisClassNode = (ClassNode) nativeType.annotatedNode();
+            ClassNode redirect = thisClassNode.redirect();
+            // This should eliminate type annotations
+            theType = new GroovyClassElement(visitorContext, new GroovyNativeElement.Class(redirect), elementAnnotationMetadataFactory, resolvedTypeArguments, arrayDimensions, isTypeVar);
         }
-        List<GroovyPropertyElement> propertyElements = new ArrayList<>(props.size());
-        if (!props.isEmpty()) {
-            GroovyClassElement thisElement = this;
-            for (Map.Entry<String, GetterAndSetter> entry : props.entrySet()) {
-                String propertyName = entry.getKey();
-                GetterAndSetter value = entry.getValue();
-                if (value.getter != null) {
-
-                    final AnnotationMetadata annotationMetadata;
-                    final GroovyAnnotationMetadataBuilder groovyAnnotationMetadataBuilder = new GroovyAnnotationMetadataBuilder(sourceUnit, compilationUnit);
-                    FieldNode field = value.declaringType.classNode.getField(propertyName);
-                    if (field instanceof LazyInitializable) {
-                        //this nonsense is to work around https://issues.apache.org/jira/browse/GROOVY-10398
-                        ((LazyInitializable) field).lazyInit();
-                        try {
-                            Field delegate = field.getClass().getDeclaredField("delegate");
-                            delegate.setAccessible(true);
-                            field = (FieldNode) delegate.get(field);
-                        } catch (NoSuchFieldException | IllegalAccessException e) {
-                            // no op
-                        }
-                    }
-                    final List<AnnotatedNode> parents = new ArrayList<>();
-                    if (field != null) {
-                        parents.add(field);
-                    }
-                    if (value.setter != null) {
-                        parents.add(value.setter);
-                    }
-                    if (!parents.isEmpty()) {
-                        annotationMetadata = AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, parents, value.getter);
-                    } else {
-                        annotationMetadata = groovyAnnotationMetadataBuilder.buildForMethod(value.getter);
-                    }
-                    GroovyPropertyElement propertyElement = new GroovyPropertyElement(
-                            visitorContext,
-                            value.declaringType,
-                            value.getter,
-                            annotationMetadata,
-                            propertyName,
-                            value.setter == null,
-                            value.getter) {
-                        @Override
-                        public Optional<MethodElement> getWriteMethod() {
-                            if (value.setter != null) {
-                                return Optional.of(new GroovyMethodElement(
-                                        thisElement,
-                                        visitorContext,
-                                        value.setter,
-                                        groovyAnnotationMetadataBuilder.buildForMethod(value.setter)
-                                ));
-                            }
-                            return Optional.empty();
-                        }
-
-                        @NonNull
-                        @Override
-                        public ClassElement getType() {
-                            return value.type;
-                        }
-
-                        @Override
-                        public Optional<MethodElement> getReadMethod() {
-                            return Optional.of(new GroovyMethodElement(thisElement, visitorContext, value.getter, annotationMetadata));
-                        }
-                    };
-                    propertyElements.add(propertyElement);
-                }
-            }
-        }
-        return propertyElements;
+        return theType;
     }
 
-    private MethodNode findConcreteConstructor() {
-        List<ConstructorNode> constructors = classNode.getDeclaredConstructors();
-        if (CollectionUtils.isEmpty(constructors) && !classNode.isAbstract() && !classNode.isEnum()) {
-            return new ConstructorNode(Modifier.PUBLIC, new BlockStatement()); // empty default constructor
+    @Override
+    public MutableAnnotationMetadataDelegate<AnnotationMetadata> getTypeAnnotationMetadata() {
+        if (elementTypeAnnotationMetadata == null) {
+            elementTypeAnnotationMetadata = elementAnnotationMetadataFactory.buildTypeAnnotations(this);
         }
-
-        List<ConstructorNode> nonPrivateConstructors = findNonPrivateMethods(constructors);
-
-        MethodNode methodNode;
-        if (nonPrivateConstructors.size() == 1) {
-            methodNode = nonPrivateConstructors.get(0);
-        } else {
-            methodNode = nonPrivateConstructors.stream()
-                    .filter(cn -> {
-                        AnnotationMetadata annotationMetadata = AstAnnotationUtils.getAnnotationMetadata(sourceUnit, compilationUnit, cn);
-                        return annotationMetadata.hasAnnotation(AnnotationUtil.INJECT) ||
-                                annotationMetadata.hasAnnotation(Creator.class);
-                    })
-                    .findFirst().orElse(null);
-            if (methodNode == null) {
-                methodNode = nonPrivateConstructors.stream().filter(cn -> Modifier.isPublic(cn.getModifiers())).findFirst().orElse(null);
-            }
-        }
-        return methodNode;
-    }
-
-    private MethodNode findDefaultConstructor() {
-        List<ConstructorNode> constructors = classNode.getDeclaredConstructors();
-        if (CollectionUtils.isEmpty(constructors) && !classNode.isEnum()) {
-            return new ConstructorNode(Modifier.PUBLIC, new BlockStatement()); // empty default constructor
-        }
-
-        constructors = findNonPrivateMethods(constructors).stream()
-                .filter(ctor -> ctor.getParameters().length == 0)
-                .collect(Collectors.toList());
-
-        if (constructors.isEmpty()) {
-            return null;
-        }
-
-        if (constructors.size() == 1) {
-            return constructors.get(0);
-        }
-
-        return constructors.stream()
-                .filter(method -> Modifier.isPublic(method.getModifiers()))
-                .findFirst().orElse(null);
-    }
-
-    private MethodNode findStaticCreator() {
-        List<MethodNode> creators = findNonPrivateStaticCreators();
-
-        if (creators.isEmpty()) {
-            return null;
-        }
-        if (creators.size() == 1) {
-            return creators.get(0);
-        }
-
-        //Can be multiple static @Creator methods. Prefer one with args here. The no arg method (if present) will
-        //be picked up by staticDefaultCreatorFor
-        List<MethodNode> withArgs = creators.stream()
-                .filter(method -> method.getParameters().length > 0)
-                .collect(Collectors.toList());
-
-        if (withArgs.size() == 1) {
-            return withArgs.get(0);
-        } else {
-            creators = withArgs;
-        }
-
-        return creators.stream()
-                .filter(method -> Modifier.isPublic(method.getModifiers()))
-                .findFirst().orElse(null);
-    }
-
-    private MethodNode findDefaultStaticCreator() {
-        List<MethodNode> creators = findNonPrivateStaticCreators().stream()
-                .filter(ctor -> ctor.getParameters().length == 0)
-                .collect(Collectors.toList());
-
-        if (creators.isEmpty()) {
-            return null;
-        }
-
-        if (creators.size() == 1) {
-            return creators.get(0);
-        }
-
-        return creators.stream()
-                .filter(method -> Modifier.isPublic(method.getModifiers()))
-                .findFirst().orElse(null);
-    }
-
-    private <T extends MethodNode> List<T> findNonPrivateMethods(List<T> methodNodes) {
-        List<T> nonPrivateMethods = new ArrayList<>(2);
-        for (MethodNode node : methodNodes) {
-            if (!Modifier.isPrivate(node.getModifiers())) {
-                nonPrivateMethods.add((T) node);
-            }
-        }
-        return nonPrivateMethods;
-    }
-
-    private List<MethodNode> findNonPrivateStaticCreators() {
-        List<MethodNode> creators = classNode.getAllDeclaredMethods().stream()
-                .filter(method -> Modifier.isStatic(method.getModifiers()))
-                .filter(method -> !Modifier.isPrivate(method.getModifiers()))
-                .filter(method -> method.getReturnType().equals(classNode))
-                .filter(method -> method.getAnnotations(makeCached(Creator.class)).size() > 0)
-                .collect(Collectors.toList());
-
-        if (creators.isEmpty() && classNode.isEnum()) {
-            creators = classNode.getAllDeclaredMethods().stream()
-                    .filter(method -> Modifier.isStatic(method.getModifiers()))
-                    .filter(method -> !Modifier.isPrivate(method.getModifiers()))
-                    .filter(method -> method.getReturnType().equals(classNode))
-                    .filter(method -> method.getName().equals("valueOf"))
-                    .collect(Collectors.toList());
-        }
-        return creators;
+        return elementTypeAnnotationMetadata;
     }
 
     /**
-     * Internal holder class for getters and setters.
+     * The groovy elements query helper.
      */
-    private class GetterAndSetter {
-        ClassElement type;
-        GroovyClassElement declaringType;
-        MethodNode getter;
-        MethodNode setter;
-        final String propertyName;
+    private final class GroovyEnclosedElementsQuery extends EnclosedElementsQuery<ClassNode, AnnotatedNode> {
 
-        GetterAndSetter(String propertyName) {
-            this.propertyName = propertyName;
+        private final boolean isSource;
+
+        private GroovyEnclosedElementsQuery(boolean isSource) {
+            this.isSource = isSource;
+        }
+
+        @Override
+        protected ClassNode getNativeClassType(ClassElement classElement) {
+            return (ClassNode) ((GroovyClassElement) classElement).getNativeType().annotatedNode();
+        }
+
+        @Override
+        protected Set<AnnotatedNode> getExcludedNativeElements(ElementQuery.Result<?> result) {
+            if (result.isExcludePropertyElements()) {
+                Set<AnnotatedNode> excluded = new HashSet<>();
+                for (PropertyElement excludePropertyElement : getBeanProperties()) {
+                    excludePropertyElement.getReadMethod()
+                            .filter(m -> !m.isSynthetic())
+                            .ifPresent(methodElement -> excluded.add(((GroovyNativeElement) methodElement.getNativeType()).annotatedNode()));
+                    excludePropertyElement.getWriteMethod()
+                            .filter(m -> !m.isSynthetic())
+                            .ifPresent(methodElement -> excluded.add(((GroovyNativeElement) methodElement.getNativeType()).annotatedNode()));
+                    excludePropertyElement.getField().ifPresent(fieldElement -> excluded.add(((GroovyNativeElement) fieldElement.getNativeType()).annotatedNode()));
+                }
+                return excluded;
+            }
+            return super.getExcludedNativeElements(result);
+        }
+
+        @Override
+        protected ClassNode getSuperClass(ClassNode classNode) {
+            return classNode.getSuperClass();
+        }
+
+        @Override
+        protected Collection<ClassNode> getInterfaces(ClassNode classNode) {
+            return Arrays.stream(classNode.getInterfaces())
+                    .filter(interfaceNode -> !interfaceNode.getName().equals(GroovyObject.class.getName()))
+                    .toList();
+        }
+
+        @Override
+        protected List<AnnotatedNode> getEnclosedElements(ClassNode classNode,
+                                                          ElementQuery.Result<?> result) {
+            Class<?> elementType = result.getElementType();
+            return getEnclosedElements(classNode, result, elementType);
+        }
+
+        private List<AnnotatedNode> getEnclosedElements(ClassNode classNode, ElementQuery.Result<?> result, Class<?> elementType) {
+            if (elementType == MemberElement.class) {
+                return Stream.concat(
+                        getEnclosedElements(classNode, result, FieldElement.class).stream(),
+                        getEnclosedElements(classNode, result, MethodElement.class).stream()
+                ).toList();
+            } else if (elementType == MethodElement.class) {
+                return classNode.getMethods()
+                        .stream()
+                        .filter(methodNode -> !JUNK_METHOD_FILTER.test(methodNode) && (methodNode.getModifiers() & Opcodes.ACC_SYNTHETIC) == 0)
+                        .<AnnotatedNode>map(m -> m)
+                        .toList();
+            } else if (elementType == FieldElement.class) {
+                return classNode.getFields().stream()
+                        .filter(fieldNode -> (!fieldNode.isEnum() || result.isIncludeEnumConstants()) && !JUNK_FIELD_FILTER.test(fieldNode) && (fieldNode.getModifiers() & Opcodes.ACC_SYNTHETIC) == 0)
+                        .<AnnotatedNode>map(m -> m)
+                        .toList();
+
+            } else if (elementType == ConstructorElement.class) {
+                return classNode.getDeclaredConstructors()
+                        .stream()
+                        .filter(methodNode -> !JUNK_METHOD_FILTER.test(methodNode) && (methodNode.getModifiers() & Opcodes.ACC_SYNTHETIC) == 0)
+                        .<AnnotatedNode>map(m -> m)
+                        .toList();
+            } else if (elementType == ClassElement.class) {
+                return StreamSupport.stream(
+                                Spliterators.spliteratorUnknownSize(classNode.getInnerClasses(), Spliterator.ORDERED),
+                                false)
+                        .filter(innerClassNode -> (innerClassNode.getModifiers() & Opcodes.ACC_SYNTHETIC) == 0)
+                        .<AnnotatedNode>map(m -> m)
+                        .toList();
+            } else {
+                throw new IllegalStateException("Unknown result type: " + elementType);
+            }
+        }
+
+        @Override
+        protected boolean excludeClass(ClassNode classNode) {
+            String packageName = Objects.requireNonNullElse(classNode.getPackageName(), "");
+            if (packageName.startsWith("org.spockframework.lang") || packageName.startsWith("spock.mock") || packageName.startsWith("spock.lang")) {
+                // Performance optimization to exclude Spock's deep hierarchy
+                return true;
+            }
+            String className = classNode.getName();
+            return Object.class.getName().equals(className)
+                    || Enum.class.getName().equals(className)
+                    || GroovyObjectSupport.class.getName().equals(className)
+                    || Script.class.getName().equals(className);
+        }
+
+        @Override
+        protected Element toAstElement(AnnotatedNode nativeType, Class<?> elementType) {
+            final GroovyElementFactory elementFactory = visitorContext.getElementFactory();
+            if (isSource) {
+                if (!(nativeType instanceof ConstructorNode) && nativeType instanceof MethodNode methodNode) {
+                    return elementFactory.newSourceMethodElement(
+                            GroovyClassElement.this,
+                            methodNode,
+                            elementAnnotationMetadataFactory
+                    );
+                }
+                if (nativeType instanceof ClassNode cn) {
+                    return elementFactory.newSourceClassElement(
+                            cn,
+                            elementAnnotationMetadataFactory
+                    );
+                }
+            }
+            if (nativeType instanceof ConstructorNode constructorNode) {
+                return elementFactory.newConstructorElement(
+                        GroovyClassElement.this,
+                        constructorNode,
+                        elementAnnotationMetadataFactory
+                );
+            }
+            if (nativeType instanceof MethodNode methodNode) {
+                return elementFactory.newMethodElement(
+                        GroovyClassElement.this,
+                        methodNode,
+                        elementAnnotationMetadataFactory
+                );
+            }
+            if (nativeType instanceof FieldNode fieldNode) {
+                if (fieldNode.isEnum()) {
+                    return elementFactory.newEnumConstantElement(
+                            GroovyClassElement.this,
+                            fieldNode,
+                            elementAnnotationMetadataFactory
+                    );
+                }
+                return elementFactory.newFieldElement(
+                        GroovyClassElement.this,
+                        fieldNode,
+                        elementAnnotationMetadataFactory
+                );
+            }
+            if (nativeType instanceof ClassNode cn) {
+                return elementFactory.newClassElement(
+                        cn,
+                        elementAnnotationMetadataFactory
+                );
+            }
+            throw new IllegalStateException("Unknown element: " + nativeType);
         }
     }
+
 }
